--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,4 @@ This file should not be edited
 
 Project was done by:
 Ugonma Nkwocha - nnandibekee@gmail.com
-Miracle Chukwu
+Miracle Chukwu - mimigolld@gmail.com
